syntax = "proto3";

package online_shop.passport.v1;

import "github.com/lvlBA/online_shop/api/v1/pagination.proto";

option go_package = "github.com/lvlBA/online_shop/passport;passport";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
  rpc GetUser (GetUserRequest) returns (GetUserResponse){}
  rpc ChangePass (ChangePassRequest) returns (ChangePassResponse){}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse){}
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse){}
}


enum Sex {
  SexUnknown = 0;
  SexMale = 1;
  SexFemale = 2;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  uint64 age = 4;
  Sex sex = 5;
  string login = 6;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  uint64 age = 3;
  Sex sex = 4;
  string login = 5;
  string pass = 6;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ChangePassRequest {
  string id = 1;
  string old_pass = 2;
  string new_pass = 3;
}

message  ChangePassResponse {
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
}

message ListUsersRequest {
  online_shop.api.Pagination pagination = 1;
  optional string name = 2;
  optional Sex sex = 3;
  optional uint32 min_age = 4;
  optional uint32 max_age = 5;
}

message ListUsersResponse {
  repeated User users = 1;
}